# scenariste

./: .gitignore  README.md  docker-compose.yml
.junie/: AGENTS.md
backend/: Cargo.toml
backend/migrations/: 20260627000000_init_users.sql  20260627_create_articles.sql  20260628_bdd.sql  20260630_shooting_techniques.sql
backend/src/: db.rs  main.rs
backend/src/handler/: article.rs  auth.rs  brainstorming.rs  character_bible.rs  metadata.rs  mod.rs  project.rs  project_act.rs  project_member.rs  project_synopsis.rs  scene.rs
backend/src/models/: article.rs  auth.rs  brainstorming.rs  character_bible.rs  mod.rs  project.rs  project_act.rs  project_member.rs  project_synopsis.rs  scene.rs  shooting_technique.rs  user.rs
backend/src/repository/: brainstorming_repository.rs  character_bible_repository.rs  mod.rs  profile_repository.rs  project_act_repository.rs  project_member_repository.rs  project_repository.rs  project_synopsis_repository.rs  scene_repository.rs  shooting_technique_repository.rs  user_repository.rs
backend/src/service/: auth_service.rs  brainstorming_service.rs  character_bible_service.rs  mod.rs  project_act_service.rs  project_member_service.rs  project_service.rs  project_synopsis_service.rs  scene_service.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/feature/auth/: auth.routes.ts
(+36 files in other folders)
