[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }

# C'est ici que ça se passe : on active "runtime-tokio" et "postgres"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
dotenvy = "0.15.7"
argon2 = { version = "0.5.3", features = ["password-hash"] }

jsonwebtoken = "9.3"
