[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] } # "serde" permet de sérialiser les UUID vers Angular
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] } # "uuid" et "chrono" activent le mapping SQL
dotenvy = "0.15.7"
argon2 = { version = "0.5.3", features = ["password-hash","std"] }
jsonwebtoken = "9.3"
chrono = { version="0.4.45", features = ["serde"] }

serde_json = "1.0.150"
